# AI-Full-Stack

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  AI全栈转岗.md  Makefile  week1任务清单.md  week2任务清单.md  week3任务清单.md  week4任务清单.md  week5任务清单.md  week6任务清单.md  week7任务清单.md  week8任务清单.md
.superpowers/brainstorm/50016-1782636591/state/: server-stopped
ai-knowledge-base/: .env.example  README.md  docker-compose.yml
ai-knowledge-base/backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  run.sh
ai-knowledge-base/backend/app/: main.py
ai-knowledge-base/backend/app/api/routes/: auth.py  health.py  knowledge_bases.py
ai-knowledge-base/backend/app/core/: config.py  database.py  redis_client.py  security.py
ai-knowledge-base/backend/app/models/: __init__.py  chat_feedback.py  chat_message.py  chat_session.py  document.py  knowledge_base.py  knowledge_base_setting.py  user.py
ai-knowledge-base/backend/app/schemas/: auth.py  common.py  knowledge_base.py
ai-knowledge-base/backend/app/services/: chunk_service.py  document_parser.py  llm_service.py  process_service.py  rerank_service.py  search_service.py  vector_service.py
ai-knowledge-base/backend/scripts/: test_chat.py  test_chunk.py  test_feedback.py  test_parser.py  test_process.py  test_semantic_search.py  test_sessions.py  test_vector.py
ai-knowledge-base/data/qdrant/: raft_state.json
ai-knowledge-base/docs/: architecture.md  config-parameters.md  current-roadmap.md  llm-chat.md  rag-link.md  week2任务清单.md  week4任务清单.md  week7-plan.md  week7任务清单.md  week8任务清单.md  缺陷.md
ai-knowledge-base/frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json
ai-knowledge-base/frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
(+46 files in other folders)
