[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=4.0,<5.0",
    "fastapi>=0.124.4",
    "fpdf2>=2.8.7",
    "openai>=1.0.0",
    "python-docx>=1.1.2",
    "pymupdf>=1.28.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.33.0",
]
